DIAC-526 Update test code smells